<?xml version="1.0"?>
<package format="2">
  <name>servo_controller</name>
  <version>0.0.0</version>
  <description>The servo controller package</description>
  <maintainer email="roscore@kakao.com">roscore</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>soem_ros2</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
